--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,9 +1,21 @@
 {% extends 'layout.html' %}
 {% block content %}
-<main class="container-fluid main-con">
-    
-    <h1>Contact Us</h1>
-    <p>Future information about MaM goes here</p>
-
+<main class="container-fluid">
+    <div class="row">
+        <div class="col main-con">
+            <div class="content-section login-form">
+                <div>
+                    <div class="page-title">
+                        <span>About Us</span>
+                    </div>
+                        <p>Metal as Medicine is a blog that covers the expanding metal community in the Okanagan and British Columbia. Our podcast gives our local metal bands and community a platform for people to get to know the individuals behind the creativity and live experience. Not only do we give the opportunity for bands to express themselves and their opinions but we also cover the local scene. This includes news, new releases, shows, events and festivals.</p>
+                        <p>Technology is advancing quickly and our small team is dedicated to keeping up with the latest trends. This allows us to continue to bring Canadian metal to the internet and provide maximum exposure.</p>
+                        <p>Our team is dedicated to bring to the internet our Western Canadian metal. This ever evolving project leads us on a journey and we don’t know who we will encounter or what we will accomplish! All we know is we are dedicated to the community and bringing what we can to the masses!</p>
+                        <p>Kelowna is our hometown and we cover the scene from here. Luckily the internet is vast and interactive enough that we can cover what is happening around the province and country just by connecting with technology. Muninn’s Post is the main venue we do our on-site podcasting and video recording of gigs and events. We are looking to expand to other cities. In fact we do visit Kamloops from time to time.</p>
+                        <p>If you feel you have a skill or talent that Metal as Medicine could utilize please feel free to contact us in any way possible. Be it through this website or our many social media platforms we are always looking for new passionate volunteers!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 {% endblock content %}
