--- a/app/templates/login/logout.html
+++ b/app/templates/login/logout.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block content %}
-<main class="container">
+<main class="container-fluid">
     <div class="row">
-        <div class="col main-con">
-            <div class="content-section edit-con">
+        <div class="col login-con">
+            <div class="content-section login-form">
                 <div>
                     <p>You have logged out of Metal as Medicine. Thank you for visiting!</p>
                 </div>
