--- a/app/templates/users/user.html
+++ b/app/templates/users/user.html
@@ -27,6 +27,12 @@
                         <div class="col">
                             <span class="subtitle">Account Birthday:</span><span> {{ user.created_on.strftime('%b %d, %Y') }}</span>
                         </div>
+                        <div class="col">
+                            <span class="subtitle">Submitted Bands:</span><span> {{ user.submitted_bands }}</span>
+                        </div>
+                        <div class="col">
+                            <span class="subtitle">Submitted Bands:</span><span> {{ user.submitted_news }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
