--- a/app/templates/bands/band.html
+++ b/app/templates/bands/band.html
@@ -31,7 +31,7 @@
                                 <span class="subtitle">Status:</span> <span>{{ band.is_active }}</span>
                             </div>
                             <div class="stats">
-                                <span class="subtitle">City located in:</span> <span>{{ band.city.title() }}, {{ band.province }}</span>
+                                <span class="subtitle">Location:</span> <span>{{ band.city.title() }}, {{ band.province }}</span>
                             </div>
                         </div>
                     </div>
@@ -40,20 +40,44 @@
 
             <div class="row band-con">
                 <div class="col">
-                    <span class="title">NEWS</span>
-                    <div class="row news-entry">
-                        <div class="news-icon">
-                            <img class="img-fluid social-icon" src="/static/imgs/icons/website2.png">
-                        </div>
-                        <div class="col news-article">
-                            <div class="row news-title">
-                                <span>ArkenFire has entered the studio to record their debut full-length album!</span>
+                    <a class="title" href="/b/{{ band.username }}/news">NEWS</a>
+                        {% for new in news %}
+                        <div class="row news-entry">
+                            <div class="news-icon">
+                                <a href="{{ url_for('band_news', band=new.band.username, title_url=new.title_url) }}"><img class="img-fluid social-icon" src="{{ url_for('static', filename='uploads/news/imgs/' + new.image) }}"></a>
                             </div>
-                            <div class="row news-date">
-                                <span>December 21, 2019</span>
+                            <div class="col news-article">
+                                <div class="row news-title">
+                                    <div>
+                                        <a href="{{ url_for('band_news', band=new.band.username, title_url=new.title_url) }}">{{ new.title }}</a>
+                                    </div>
+                                </div>
+                                <div class="row news-date">
+                                    <div class="news-submitted">
+                                        <span>Submitted by</span>
+                                    </div>
+                                    <div class="news-submitter">
+                                        <a href="/u/{{ new.submitter.username }}">{{ new.submitter.username }}</a>
+                                    </div>
+                                    <div>
+                                        <span>{{ new.created_on.strftime('%I:%M%p on %b %d, %Y') }}</span>
+                                    </div>
+                                </div>
+                                <div class="row news-links">
+                                    {% if new.venue_id != None %}
+                                    <div>
+                                        <a href="/b/{{ new.venue.username }}">{{ new.venue.name }}</a>
+                                    </div>
+                                    {% endif %}
+                                    {% if new.festival_id != None %}
+                                    <div>
+                                        <a href="/b/{{ new.festival.username }}">{{ new.festival.name }}</a>
+                                    </div>
+                                    {% endif %}
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
 
@@ -108,12 +132,43 @@
                     <a href="{{ band.instagram }}"><img class="img-fluid social-icon" src="/static/imgs/icons/instagram.png"></a>
                 </div> 
             </div>
+            <div class="row links-con">
+                    <div class="center">
+                        <input name="action" class="btn btn-outline-secondary" type="submit" value="SUBMIT POST" onclick="window.location='{{ url_for('edit_band', band=band.username) }}'"/>
+                    </div>
+                    <div class="center">
+                        <input name="action" class="btn btn-outline-secondary" type="submit" value="SUBMIT IMAGE" onclick="window.location='{{ url_for('edit_band', band=band.username) }}'"/>
+                    </div>
+            </div>
+            {% if current_user.admin %}
+                <div class="row links-con">
+                    <div class="col">
+                        <div class="row">
+                            <span>ADMIN MENU</span>
+                        </div>
+                        <div class="row">
+                            <div>
+                                <a href="{{ url_for('edit_band', band=band.username) }}">Edit Band</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            {% if current_user.promoter %}
+                <div class="row links-con">
+                    <div class="col">
+                        <div class="row">
+                            <span>PROMOTER MENU</span>
+                        </div>
+                        <div class="row">
+                            <div>
+                                <a href="{{ url_for('edit_band', band=band.username) }}">Create Event</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
-    {% if current_user.admin %}
-        <div>
-            <input name="action" class="btn btn-outline-secondary" type="submit" value="EDIT BAND" onclick="window.location='{{ url_for('edit_band', band=band.username) }}'"/>
-        </div>
-    {% endif %}
 </main>
 {% endblock content %}
