--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,6 +5,9 @@
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  
+    {{ moment.include_jquery() }}
+    {{ moment.include_moment() }}
+
      <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
      <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu&display=swap" rel="stylesheet">
@@ -28,22 +31,25 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="dropdown-item" href="/b">Bands</a>
+                  <a class="dropdown-item" href="{{ url_for('news') }}">News</a>
                 </li>
                 <li class="nav-item">
-                  <a class="dropdown-item" href="/v">Venues</a>
+                  <a class="dropdown-item" href="{{ url_for('b') }}">Bands</a>
                 </li>
                 <li class="nav-item">
-                  <a class="dropdown-item" href="/f">Festivals</a>
+                  <a class="dropdown-item" href="{{ url_for('v') }}">Venues</a>
                 </li>
                 <li class="nav-item">
-                  <a class="dropdown-item" href="/events">Events</a>
+                  <a class="dropdown-item" href="{{ url_for('f') }}">Festivals</a>
                 </li>
                 <li class="nav-item">
-                  <a class="dropdown-item" href="/promoters">Promoters</a>
+                  <a class="dropdown-item" href="{{ url_for('events') }}">Events</a>
                 </li>
                 <li class="nav-item">
-                  <a class="dropdown-item" href="/u">Users</a>
+                  <a class="dropdown-item" href="{{ url_for('promoters') }}">Promoters</a>
+                </li>
+                <li class="nav-item">
+                  <a class="dropdown-item" href="{{ url_for('u') }}">Users</a>
                 </li>
               </ul>
               {% if current_user.admin %}
@@ -64,19 +70,24 @@
             </div>
               {% if current_user.is_authenticated %}
                 <ul class="navbar-nav navbar-right">
-                  {% if current_user.promoter != True %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('promoter_register') }}">Become a promoter!</a>
-                  </li>
-                  {% endif %}
                   {% if current_user.promoter %}
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Promoter Menu
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="{{ url_for('create_event') }}">Create Event</a>
-                      <a class="dropdown-item" href="{{ url_for('promoter_events') }}">View Events</a>
+                      <a class="dropdown-item" href="#">Create Event</a>
+                      <a class="dropdown-item" href="#">View Events</a>
+                    </div>
+                  </li>
+                  {% endif %}
+                  {% if current_user.editor %}
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Editor Menu
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="{{ url_for('new_article') }}">Create News</a>
                     </div>
                   </li>
                   {% endif %}
@@ -123,7 +134,9 @@
     </div>
     
     <footer class="page-footer font-small blue">
-      <div class="footer-copyright text-center py-2"><a href="{{ url_for('about') }}">About</a></div>
+      <div class="row center">
+          <div class="footer-copyright text-center py-2"><a href="{{ url_for('about') }}">About</a> {% if current_user.promoter != True %}| <a href="{{ url_for('promoter_register') }}">Become a promoter!</a>{% endif %}</div>
+      </div>      
       <div class="footer-copyright text-center">© 2020 Metal as Medicine
       </div>
     </footer>
@@ -133,6 +146,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <script src="/static/js/javascript.js"></script>
+    <script src="/static/js/moment.min.js"></script>
+    <script src="/static/js/jquery-3.4.1.min.js"></script>
 </body>
 </html>
