--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<main class="container">
+<main class="container-fluid">
     <div class="row">
-        <div class="col main-con">
+        <div class="col login-con">
             <div class="content-section login-form">
                 <form method="POST" action="">
                     {{ form.hidden_tag() }}
